--- a/projects/personal-site/css/master.css
+++ b/projects/personal-site/css/master.css
@@ -1,7 +1,8 @@
 body {
-	background: #FF0000;
+	background-color: #C2C2D6;
 	font-family: "Helvetica", sans-serif;
-	margin: 0px;
+	margin: 0 auto;
+	top: 0;
 }
 
 h1 {
@@ -14,13 +15,19 @@ h1 {
 }
 .container {
 	background: #D8D8DC;
-	width: 700px;
+	width: 800px;
 	margin: 0 auto;
 }
 
+.img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 5px 5px 5px 5px;
+}
+
 .nav {
-	border-top: 2px solid #000000;
-	border-bottom: 2px solid #000000;
+	border: 2px solid #000000;
 	margin-top: 15px;
 	text-align: center;
 	font-size: 30px;
@@ -43,6 +50,39 @@ h1 {
 	padding: 5px;
 }
 
-#main {
-	padding: 15px;
+.footer {
+	position: fixed;
+	height: 25px;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background: #CCC;
+	color: #FFF;
 }
+
+.footer p {
+	padding-bottom:10px;
+}
+
+aside {
+	width: 236px;
+	float: left;
+	background: #D8D8DC;
+	padding-right: 5px;
+	padding-left: 5px;
+	border-right: 2px solid #000;
+	border-left: 2px solid #000;
+	border-bottom: 2px solid #000;
+}
+
+section {
+	width: 526px;
+	margin-right: 10px;
+	float: left;
+	background: #D8D8DC;
+	padding-left: 10px;
+	border-right: 2px solid #000;
+	border-left: 2px solid #000;
+	border-bottom: 2px solid #000;
+}
+
