--- a/projects/final/css/master.css
+++ b/projects/final/css/master.css
@@ -168,6 +168,7 @@ h1 {
 	background: #FFF;
 	margin-left: 12px;
 	box-shadow: 0 0px 3px 3px #D4D4D4;
+	padding-top: 25px;
 }
 
 .SmallBoxContent2 {
@@ -257,6 +258,12 @@ h1 {
 	z-index: -1;
 	padding-right: 20px;
 	display: inline;
+}
+
+@media only screen and (max-device-width: 400px) {
+	body {
+		background: #FFF;
+	}
 }
 
 
